--- a/src/business-reference-architecture/index.html
+++ b/src/business-reference-architecture/index.html
@@ -15,19 +15,10 @@
           <h2 id="h2" tabindex="-1">Business reference architecture <a class="header-anchor" href="#h2">¶</a></h2>
         </div>
         <div class="container">
-          <business-reference-architecture id="business-reference-architecture" model-json="{}" />
+          <business-reference-architecture id="business-reference-architecture" />
         </div>
       </div>
   </main>
-  
-  <script>
-
-    const component = document.getElementById('business-reference-architecture');
-
-    setTimeout(() => {
-      component.model = { };
-    }, 3000);
-  </script>
 </body>
 
 </html>
