Command viewer setup

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
             <li><a href="./business-model-canvas/index.html">business model canvas</a></li>
             <li><a href="./business-reference-architecture/index.html">business reference architecture</a></li>
             <li><a href="./model-viewer/index.html">model viewer</a></li>
+            <li><a href="./command-viewer/index.html">command viewer</a></li>
           </ul>
         </div>
   </main>
