changed index.html test case

--- a/src/business-reference-architecture/index.html
+++ b/src/business-reference-architecture/index.html
@@ -19,20 +19,61 @@
             {
                 "arrow": "down",
                 "buttonStyle": "brand",
-                "buttons": [],
-                "title": "End users",
-                "link": "manage-mortgages/our-business/end-users/index.html"
+                "buttons": [{
+                    "title": "Consumer",
+                    "link": null,
+                    "icon": "user"
+                }, {
+                    "title": "Employee",
+                    "link": "#",
+                    "icon": "users-three"
+                }, {
+                    "title": "Lender",
+                    "link": null,
+                    "icon": "hand-coins"
+                }, {
+                    "title": "Notary",
+                    "link": null,
+                    "icon": "signature"
+                }, {
+                    "title": "Advisor",
+                    "link": "#",
+                    "icon": "suitcase"
+                }],
+                "title": "End users"
             },
             {
                 "arrow": "down",
-                "buttons": [],
+                "buttons": [{
+                    "title": "Consumer portal",
+                    "link": "#",
+                    "icon": "storefront"
+                }, {
+                    "title": "Operations portal",
+                    "link": "#",
+                    "icon": "factory"
+                }, {
+                    "title": "Email",
+                    "link": null,
+                    "icon": "at"
+                }],
                 "title": "Channels",
                 "link": "manage-mortgages/our-business/channels/index.html"
             },
             {
                 "buttonStyle": "stream",
                 "sectionStyle": "streams",
-                "buttons": [],
+                "buttons": [{
+                    "title": "Orientation",
+                    "link": "#",
+                    "icon": "magnifying-glass"
+                }, {
+                    "title": "Origination",
+                    "link": "#"
+                }, {
+                    "title": "Servicing",
+                    "link": "#"
+                }],
                 "title": "Value streams",
                 "link": "manage-mortgages/our-business/value-streams/index.html"
             },
@@ -46,19 +87,23 @@
                         "buttons": [
                             {
                                 "title": "Content management",
-                                "link": null
+                                "link": "#",
+                                "icon": "pencil"
                             },
                             {
                                 "title": "Correspondence management",
-                                "link": null
+                                "link": null,
+                                "icon": "letter"
                             },
                             {
                                 "title": "Document management",
-                                "link": null
+                                "link": null,
+                                "icon": "archive"
                             },
                             {
                                 "title": "Label management",
-                                "link": null
+                                "link": "#",
+                                "icon": "tag"
                             }
                         ]
                     },
@@ -68,7 +113,8 @@
                         "buttons": [
                             {
                                 "title": "Orientation management",
-                                "link": "manage-mortgages/our-business/domains/orientations/orientation-management/index.html"
+                                "link": "manage-mortgages/our-business/domains/orientations/orientation-management/index.html",
+                                "icon": "hand-heart"
                             }
                         ]
                     },
@@ -78,11 +124,13 @@
                         "buttons": [
                             {
                                 "title": "Credit checks management",
-                                "link": null
+                                "link": null,
+                                "icon": "shield-check"
                             },
                             {
                                 "title": "Loan application management",
-                                "link": null
+                                "link": "#",
+                                "icon": "hand-coins"
                             }
                         ]
                     },
@@ -92,7 +140,8 @@
                         "buttons": [
                             {
                                 "title": "Consumer relationship management",
-                                "link": "manage-mortgages/our-business/domains/relationships/consumer-relationship-management/index.html"
+                                "link": "manage-mortgages/our-business/domains/relationships/consumer-relationship-management/index.html",
+                                "icon": "user-focus"
                             }
                         ]
                     }
@@ -106,35 +155,43 @@
                 "buttons": [
                     {
                         "title": "Cost reductions through growth",
-                        "link": "manage-mortgages/our-business/principles/cost-reductions-through-growth/index.html"
+                        "link": "manage-mortgages/our-business/principles/cost-reductions-through-growth/index.html",
+                        "icon": "shield-check"
                     },
                     {
                         "title": "Direct processing",
-                        "link": "manage-mortgages/our-business/principles/direct-processing/index.html"
+                        "link": "manage-mortgages/our-business/principles/direct-processing/index.html",
+                        "icon": "shield-check"
                     },
                     {
                         "title": "European mortgages platform",
-                        "link": "manage-mortgages/our-business/principles/european-mortgages-platform/index.html"
+                        "link": "manage-mortgages/our-business/principles/european-mortgages-platform/index.html",
+                        "icon": "shield-check"
                     },
                     {
                         "title": "Focus on residential mortgages",
-                        "link": "manage-mortgages/our-business/principles/focus-on-residential-mortgages/index.html"
+                        "link": "manage-mortgages/our-business/principles/focus-on-residential-mortgages/index.html",
+                        "icon": "shield-check"
                     },
                     {
                         "title": "Generic and flexible",
-                        "link": "manage-mortgages/our-business/principles/generic-and-flexible/index.html"
+                        "link": "manage-mortgages/our-business/principles/generic-and-flexible/index.html",
+                        "icon": "shield-check"
                     },
                     {
                         "title": "High levels of compliance and assurance",
-                        "link": "manage-mortgages/our-business/principles/high-levels-of-compliance-and-assurance/index.html"
+                        "link": "manage-mortgages/our-business/principles/high-levels-of-compliance-and-assurance/index.html",
+                        "icon": "shield-check"
                     },
                     {
                         "title": "Impartiality",
-                        "link": "manage-mortgages/our-business/principles/impartiality/index.html"
+                        "link": "manage-mortgages/our-business/principles/impartiality/index.html",
+                        "icon": "shield-check"
                     },
                     {
                         "title": "Sustainability",
-                        "link": "manage-mortgages/our-business/principles/sustainability/index.html"
+                        "link": "manage-mortgages/our-business/principles/sustainability/index.html",
+                        "icon": "shield-check"
                     }
                 ],
                 "title": "Principles",
