--- a/src/business-reference-architecture/index.html
+++ b/src/business-reference-architecture/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
+  <base href=".." />
   <title>Business reference architecture</title>
   <link rel="stylesheet" href="../assets/style/page/style.css">
 </head>
@@ -22,23 +23,23 @@
                 "buttons": [{
                     "title": "Consumer",
                     "link": null,
-                    "icon": "user"
+                    "icon": "ph-user"
                 }, {
                     "title": "Employee",
                     "link": "#",
-                    "icon": "users-three"
+                    "icon": "ph-users-three"
                 }, {
                     "title": "Lender",
                     "link": null,
-                    "icon": "hand-coins"
+                    "icon": "ph-hand-coins"
                 }, {
                     "title": "Notary",
                     "link": null,
-                    "icon": "signature"
+                    "icon": "ph-signature"
                 }, {
                     "title": "Advisor",
                     "link": "#",
-                    "icon": "suitcase"
+                    "icon": "ph-suitcase"
                 }],
                 "title": "End users"
             },
@@ -47,15 +48,15 @@
                 "buttons": [{
                     "title": "Consumer portal",
                     "link": "#",
-                    "icon": "storefront"
+                    "icon": "ph-storefront"
                 }, {
                     "title": "Operations portal",
                     "link": "#",
-                    "icon": "factory"
+                    "icon": "ph-factory"
                 }, {
                     "title": "Email",
                     "link": null,
-                    "icon": "at"
+                    "icon": "ph-at"
                 }],
                 "title": "Channels",
                 "link": "manage-mortgages/our-business/channels/index.html"
@@ -66,7 +67,7 @@
                 "buttons": [{
                     "title": "Orientation",
                     "link": "#",
-                    "icon": "magnifying-glass"
+                    "icon": "ph-magnifying-glass"
                 }, {
                     "title": "Origination",
                     "link": "#"
@@ -88,22 +89,22 @@
                             {
                                 "title": "Content management",
                                 "link": "#",
-                                "icon": "pencil"
+                                "icon": "ph-pencil"
                             },
                             {
                                 "title": "Correspondence management",
                                 "link": null,
-                                "icon": "letter"
+                                "icon": "ph-letter"
                             },
                             {
                                 "title": "Document management",
                                 "link": null,
-                                "icon": "archive"
+                                "icon": "ph-archive"
                             },
                             {
                                 "title": "Label management",
                                 "link": "#",
-                                "icon": "tag"
+                                "icon": "ph-tag"
                             }
                         ]
                     },
@@ -114,7 +115,7 @@
                             {
                                 "title": "Orientation management",
                                 "link": "manage-mortgages/our-business/domains/orientations/orientation-management/index.html",
-                                "icon": "hand-heart"
+                                "icon": "ph-hand-heart"
                             }
                         ]
                     },
@@ -125,12 +126,12 @@
                             {
                                 "title": "Credit checks management",
                                 "link": null,
-                                "icon": "shield-check"
+                                "icon": "ph-shield-check"
                             },
                             {
                                 "title": "Loan application management",
                                 "link": "#",
-                                "icon": "hand-coins"
+                                "icon": "assets/icons/loan.svg"
                             }
                         ]
                     },
@@ -141,7 +142,7 @@
                             {
                                 "title": "Consumer relationship management",
                                 "link": "manage-mortgages/our-business/domains/relationships/consumer-relationship-management/index.html",
-                                "icon": "user-focus"
+                                "icon": "ph-user-focus"
                             }
                         ]
                     }
@@ -156,42 +157,42 @@
                     {
                         "title": "Cost reductions through growth",
                         "link": "manage-mortgages/our-business/principles/cost-reductions-through-growth/index.html",
-                        "icon": "shield-check"
+                        "icon": "ph-shield-check"
                     },
                     {
                         "title": "Direct processing",
                         "link": "manage-mortgages/our-business/principles/direct-processing/index.html",
-                        "icon": "shield-check"
+                        "icon": "ph-shield-check"
                     },
                     {
                         "title": "European mortgages platform",
                         "link": "manage-mortgages/our-business/principles/european-mortgages-platform/index.html",
-                        "icon": "shield-check"
+                        "icon": "ph-shield-check"
                     },
                     {
                         "title": "Focus on residential mortgages",
                         "link": "manage-mortgages/our-business/principles/focus-on-residential-mortgages/index.html",
-                        "icon": "shield-check"
+                        "icon": "ph-shield-check"
                     },
                     {
                         "title": "Generic and flexible",
                         "link": "manage-mortgages/our-business/principles/generic-and-flexible/index.html",
-                        "icon": "shield-check"
+                        "icon": "ph-shield-check"
                     },
                     {
                         "title": "High levels of compliance and assurance",
                         "link": "manage-mortgages/our-business/principles/high-levels-of-compliance-and-assurance/index.html",
-                        "icon": "shield-check"
+                        "icon": "ph-shield-check"
                     },
                     {
                         "title": "Impartiality",
                         "link": "manage-mortgages/our-business/principles/impartiality/index.html",
-                        "icon": "shield-check"
+                        "icon": "ph-shield-check"
                     },
                     {
                         "title": "Sustainability",
                         "link": "manage-mortgages/our-business/principles/sustainability/index.html",
-                        "icon": "shield-check"
+                        "icon": "ph-shield-check"
                     }
                 ],
                 "title": "Principles",
