--- a/src/business-reference-architecture/index.html
+++ b/src/business-reference-architecture/index.html
@@ -56,7 +56,7 @@
                 }, {
                     "title": "Email",
                     "link": null,
-                    "icon": "ph-at"
+                    "icon": "fa-mailbox"
                 }],
                 "title": "Channels",
                 "link": "manage-mortgages/our-business/channels/index.html"
@@ -94,7 +94,7 @@
                             {
                                 "title": "Correspondence management",
                                 "link": null,
-                                "icon": "ph-letter"
+                                "icon": "mat-markunread_mailbox"
                             },
                             {
                                 "title": "Document management",
