Dynamic CSS based on properties

--- a/src/business-reference-architecture/index.html
+++ b/src/business-reference-architecture/index.html
@@ -6,6 +6,7 @@
   <base href=".." />
   <title>Business reference architecture</title>
   <link rel="stylesheet" href="../assets/style/page/style.css">
+  <script src="https://unpkg.com/@phosphor-icons/web"></script>
 </head>
 
 <body>
@@ -19,7 +20,7 @@
             <business-reference-architecture id="business-ref-arch" model-json='[
             {
                 "arrow": "down",
-                "buttonStyle": "brand",
+                "buttonType": "brand",
                 "buttons": [{
                     "title": "Consumer",
                     "link": null,
@@ -62,8 +63,8 @@
                 "link": "manage-mortgages/our-business/channels/index.html"
             },
             {
-                "buttonStyle": "stream",
-                "sectionStyle": "streams",
+                "buttonType": "stream",
+                "sectionType": "streams",
                 "buttons": [{
                     "title": "Orientation",
                     "link": "#",
@@ -80,7 +81,7 @@
             },
             {
                 "arrow": "up",
-                "buttonStyle": "white",
+                "buttonType": "default",
                 "groups": [
                     {
                         "title": "Engagements",
@@ -151,8 +152,8 @@
                 "link": "manage-mortgages/our-business/domains/index.html"
             },
             {
-                "sectionStyle": "side",
-                "buttonStyle": "white",
+                "sectionType": "side",
+                "buttonType": "default",
                 "buttons": [
                     {
                         "title": "Cost reductions through growth",
